--- a/app/static/index.html
+++ b/app/static/index.html
@@ -27,7 +27,7 @@
 <body>
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<a href="/"><img height="42" width="42" src="static/images/25694.png" ></a>
+			<a href="/"><img height="42" width="42" src="static/images/cattle1.png" ></a>
 			<span class="contact100-form-title">Catte Facial Recognition. Cows are Cool!!!</span>
 			<form class="contact100-form validate-form" action="/upload" method="post" enctype="multipart/form-data">
 				<div class="wrap-input100 validate-input" data-validate = "Valid image file is required: jpg or png">
